myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: myapp
        image: vignesh00501/myapp:v1
        ports:
        - containerPort: 80
